--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ Thumbs.db
 .vscode/
 .idea/
 
+melo.db
+frontend/node_modules/.vite/deps/_metadata.json
+frontend/node_modules/.vite/deps/@mui_material.js
