--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,13 @@
-fastapi>=0.110
-uvicorn[standard]>=0.23
-python-dotenv>=1.0
-SQLAlchemy>=2.0
-psycopg2-binary>=2.9
-requests>=2.31
-httpx>=0.27
-spotipy>=2.23
-orjson>=3.10
+fastapi==0.111.0
+uvicorn[standard]==0.29.0
+python-dotenv==1.0.1
+SQLAlchemy==2.0.29
+psycopg2-binary==2.9.9
+requests==2.32.3
+httpx==0.27.0
+spotipy==2.23.0
+orjson==3.10.6
+pydantic==2.7.4
+openai==1.26.0
+pytest==8.2.1
+pytest-asyncio==0.23.6
